fix: remove radius on mobile selected tab

--- a/src/navigation/Tabs.scss
+++ b/src/navigation/Tabs.scss
@@ -128,6 +128,8 @@
     &[aria-selected="true"] {
       border-bottom-color: var(--tab-border-color);
       box-shadow: inset calc(var(--tab-active-indicator-width) + var(--tab-border-width)) 0px 0px var(--tab-active-indicator-color);
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
   }
 
